# MyAddInNative

./: .gitignore  AddIn.sln  CMakeLists.txt  MANIFEST.XML  build.sh  install_host.sh
AddInChrome/: AddInChrome.rc  AddInChrome.vcxproj  AddInChrome.vcxproj.filters  CMakeLists.txt  config.cpp  config.h
AddInChromeSetup/: AddInChromeSetup.wixproj  AddInChromeSetup.wxi  Product.wxs  com.1c.enterprise.addin.example.json  com.1c.enterprise.addin.example.win.json
AddInFF/: AddInFF.def  AddInFF.vcxproj  AddInFF.vcxproj.filters  CMakeLists.txt  Makefile  config.cpp  config.h  plugin.cpp
AddInIE/: AddInIE.idl  AddInIE.vcxproj  AddInIE.vcxproj.filters
AddInNPAPI/: AddInNPAPI.cpp  AddInNPAPI.def  AddInNPAPI.rc  AddInNPAPI.vcxproj  AddInNPAPI.vcxproj.filters  makefile  makefile64  resource.h
COM/: AddIn.rc  AddInCOM.vcxproj  AddInCOM.vcxproj.filters
NativeAPI/: AddInNative.cpp  AddInNative.h  AddInNative.vcxproj
NativeAPIMobile/: AddInNative.cpp  AddInNative.h  ConversionWchar.h  StepCounter.cpp  StepCounter.h  StepCounter.mm
NativeAPIMobile/Android_Proj/: AndroidManifest.xml  build.xml  build_libs.bat  local.properties  make.bat
NativeAPIMobile/Android_Proj/jni/: Application.mk
NativeAPIMobile/Android_Proj/src/com/stepCounterPackage/stepCounterLib/: StepCounterClass.java
NativeAPIMobile/Config/: ANDROID_MANIFEST_EXTENTIONS.XML  AddIn_StepCounter.cf  IOS_MANIFEST_EXTENTIONS.XML  MANIFEST.XML
NativeAPIMobile/WinRT_Proj/com_1c_StepCounter/: com_1c_StepCounter.sln
NativeAPIMobile/WinRT_Proj/com_1c_StepCounter/com_1c_StepCounter/: com_1c_StepCounter.vcxproj
NativeAPIMobile/WinRT_Proj/com_1c_StepCounter_Phone/: com_1c_StepCounter_Phone.sln
NativeAPIMobile/WinRT_Proj/com_1c_StepCounter_Phone/com_1c_StepCounter_Phone/: com_1c_StepCounter_Phone.vcxproj  com_1c_StepCounter_Phone.vcxproj.filters
NativeAPIMobile/iOS_Proj/NativeAPI.xcodeproj/: project.pbxproj
PackageIE/: addin.inf  cab_files.ddf
PackageIE64/: addin.inf  buildcab.bat  cab_files.ddf
PackageSafari/: build_mac.sh
PackageSafari/1CEAdnWebNPAPISafOSX.bundle/Contents/PlugIns/NativeAPI.bundle/Contents/: Info.plist
PackageSafari/1CEAdnWebNPAPISafOSX.bundle/Contents/PlugIns/NativeAPI.bundle/Contents/MacOS/: NativeAPI
bind/: AddInNative.exp  AddInNative.lib
